Overflow Fix
Overflow fix from page forgot your page to mobile

--- a/Login/stylefgt.css
+++ b/Login/stylefgt.css
@@ -14,11 +14,15 @@
 }
 
 html, body {
-    height: 100%;}
+    height: 100%;
+
+    overflow: hidden;
+}
 
 body {
     height: 100vh;
-
+    overflow: hidden;
+    
     background: url(imagens/fundo-pc.png) center center / cover no-repeat;
 
     display: flex;
@@ -193,6 +197,8 @@ main > p {
 
     font-size: 12px;
 }
+
+
 
 
 
